--- a/Webseite.html
+++ b/Webseite.html
@@ -12,8 +12,8 @@
 
 <body style="background-image:url('Background.png')">
     
-<h1>Testüberschrift</h1>
-<h2>Testtext von Peer-Ole Reinecke</h2>
+<h1>Frohe Weihnachten!</h1>
+<h2>Von mir für dich.</h2>
 
 <!--Formular zur Eingabe des Gutscheincodes-->
 <form action="/action_page.php">
