--- a/Webseite.html
+++ b/Webseite.html
@@ -4,8 +4,8 @@
 
 <head>
 <style>
-    h1{color:whitesmoke}
-    h2{color:dimgray}
+    h1{color:darkred}
+    h2{color:rgb(65, 56, 56)}
 </style>
 
 </head>
