--- a/Webseite.html
+++ b/Webseite.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body style="background-image:url('Background.png')">
+<body style="background-image:url('Background.png');background-size: cover;">
     
 <h1>Frohe Weihnachten!</h1>
 <h2>Von mir für dich.</h2>
