--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>Click the "Submit" button to verify your code.</p>
 
 
-<a href="Gutschein.html">Gutschein!</a>
+<!--<a href="Gutschein.html">Gutschein!</a> -->
 
 </body>
 
