--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <h2>Von mir für dich.</h2>
 
 <!--Formular zur Eingabe des Gutscheincodes-->
-<form action="/action_page.php">
-    Gutscheincode: <input type="text" name="FirstName"><br>
+<form action="/gutschein.html">
+    Gutscheincode: <input type="text" name="Gutscheincode"><br>
     <input type="submit" value="Submit">
     </form>
     
