--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
 <h1>Frohe Weihnachten!</h1>
 <h2>Von mir für dich.</h2>
 
+<script>
+    function submit()
+        {
+            var cd=document.forms["myform"]["code"].value;
+            
+            if(cd=="ABENTEUER2019")
+                {
+                    window.location = "gutschein.html";
+                    alert("Submission successful");
+                }
+            else
+                {
+                    alert("incorrect code");
+                }
+        }
+</script>
+
+<form name="myform">
+    Gutscheincode:<input type="text" name="code"><br>
+    <input type="submit" onclick="submit()"
+</form>
+
 <!--Formular zur Eingabe des Gutscheincodes-->
 <!--
     <form action="/gutschein.html">
@@ -24,11 +46,6 @@
     
     <p>Click the "Submit" button to verify your code.</p>
 -->
-
-<form action="gutschein.php" method="post">
-    <p>Gutscheincode: <input type="text" name="gutscheincode"></p>
-    <p><input type="submit" name="submit" value="Submit"></p>
-</form>
 
 <!--<a href="Gutschein.html">Gutschein!</a> -->
 
