--- a/index.html
+++ b/index.html
@@ -15,22 +15,7 @@
 <h1>Frohe Weihnachten!</h1>
 <h2>Von mir für dich.</h2>
 
-<script>
-    function submit()
-        {
-            var cd=document.forms["myform"]["code"].value;
-            
-            if(cd=="ABENTEUER2019")
-                {
-                    window.location = "gutschein.html";
-                    alert("Submission successful");
-                }
-            else
-                {
-                    alert("incorrect code");
-                }
-        }
-</script>
+<script src="js/gutschein.js"> </script>
 
 <form name="myform">
     Gutscheincode:<input type="text" name="code"><br>
