--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>Frohe Weihnachten!</h1>
 <h2>Von mir für dich.</h2>
 
-<script src="js/gutschein.js"> </script>
+<script src="gutschein.js"> </script>
 
 <form name="myform">
     Gutscheincode:<input type="text" name="code"><br>
