--- a/index.html
+++ b/index.html
@@ -3,37 +3,30 @@
 <html lang="de">
 
 <head>
-<style>
-    h1{color:darkred}
-    h2{color:rgb(65, 56, 56)}
-</style>
-
+    <link rel="stylesheet" href="style.css"/>
+    <script src="gutschein.js"> </script>
 </head>
 
 <body style="background-image:url('Background.png');background-size: cover;">
+<div class="container">
+<div class="main">
     
 <h1>Frohe Weihnachten!</h1>
 <h2>Von mir für dich.</h2>
 
-<script src="gutschein.js"> </script>
-
-<form name="myform">
-    Gutscheincode:<input type="text" name="code"><br>
+<form id="form_id" method="post" name="myform">
+<label>Gutscheincode :</label>
+<input type="text" name="code"><br>
+<input type="submit" value="Submit" onclick="submit()">
+    <!-- 
+    <label>Gutscheincode:</label>
+    <input type="text" name="code"><br>
     <input type="submit" onclick="submit()"
+    -->
 </form>
 
-<!--Formular zur Eingabe des Gutscheincodes-->
-<!--
-    <form action="/gutschein.html">
-    Gutscheincode: <input type="text" name="Gutscheincode"><br>
-    <input type="submit" value="Submit">
-    </form>
-    
-    <p>Click the "Submit" button to verify your code.</p>
--->
-
-<!--<a href="Gutschein.html">Gutschein!</a> -->
-
+</div>
+</div>
 </body>
 
 </html>
