--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>Frohe Weihnachten!</h1>
 <h2>Von mir für dich.</h2>
 
-<form id="form_id" method="post" name="myform">
+<form name="myform">
 <label>Gutscheincode :</label>
 <input type="text" name="code"><br>
 <input type="submit" value="Submit" onclick="submit()">
