--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <form name="myform">
 <label>Gutscheincode :</label>
-<input type="text" name="code"><br>
+<input type="text" name="code" value="Enter code here"><br>
 <input type="submit" value="Submit" onclick="submit()">
     <!-- 
     <label>Gutscheincode:</label>
