--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
 <h2>Von mir für dich.</h2>
 
 <form name="myform">
-<label>Gutscheincode :</label>
-<input type="text" name="code" value="Enter code here"><br>
-<input type="submit" value="Submit" onclick="submit()">
-    <!-- 
-    <label>Gutscheincode:</label>
-    <input type="text" name="code"><br>
-    <input type="submit" onclick="submit()"
-    -->
+    <label><br>Gutscheincode:</label>
+    <input type="text" name="code" value="Enter code here"><br>
+    <input type="submit" onclick="submit()" value="Submit"
 </form>
 
 </div>
