--- a/gutschein.html
+++ b/gutschein.html
@@ -4,7 +4,7 @@
 <head>
 </head>
 
-<body>
+<body style="background-image:url('Background.jpg');background-size: cover;">
 
 <img src="Abenteuergutschein.jpg" alt="Gutschein" style="width: 100%;max-width: 800px">
 
