--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="de">
 
 <head>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css">
     <script src="gutschein.js"> </script>
 </head>
 
-<body style="background-image:url('Background.png');background-size: cover;">
+<body style="background-image:url('Background.jpg');background-size: cover;">
 <div class="container">
 <div class="main">
     
