--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="gutschein.js"> </script>
 </head>
 
-<body style="background-image:url('Background.jpg');background-size: cover;">
+<body style="background-image:url('Christmas Background.jpg');background-size: cover;">
 <div class="container">
 <div class="main">
     
