--- a/gutschein.html
+++ b/gutschein.html
@@ -6,7 +6,7 @@
 
 <body style="background-image:url('Background.jpg');background-size: cover;">
 
-<img src="Abenteuergutschein.jpg" alt="Gutschein" style="width: 100%;max-width: 800px">
+<img src="Abenteuergutschein.jpg" alt="Gutschein" style="width: auto;max-width: 800px;image">
 
 </body>
 
