--- a/gutschein.html
+++ b/gutschein.html
@@ -4,9 +4,9 @@
 <head>
 </head>
 
-<body style="background-image:url('Background.jpg');background-size: cover;">
+<body>
 
-<img src="Abenteuergutschein.jpg" alt="Gutschein" style="width: auto;max-width: 800px;image">
+<img src="Abenteuergutschein.jpg" alt="Gutschein" style="width: 100%;max-width: 800px">
 
 </body>
 
