--- a/gutschein.html
+++ b/gutschein.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<img src="Abenteuergutschein.jpg" alt="Gutschein" style="width: 100%;max-width: 800px">
+<img src="/Images/Abenteuergutschein.jpg" alt="Gutschein" style="width: 100%;max-width: 800px">
 
 </body>
 
