--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <form name="myform">
     <label><br>Gutscheincode:</label>
-    <input type="text" name="code" value="Enter code here"><br>
+    <input type="text" name="code" value="Enter code here" onfocus="this.value=''"><br>
     <input type="submit" onclick="submit()" value="Submit"
 </form>
 
