--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <div class="main">
     
 <h1>Frohe Weihnachten!</h1>
-<h2>Von mir für dich.</h2>
+<h2>Von mir für dich</h2>
 
 <form name="myform">
-    <label><br>Gutscheincode:</label>
+    <label><br>Couponcode:</label>
     <input type="text" name="code" value="Enter code here" onfocus="this.value=''"><br>
     <input type="submit" onclick="submit()" value="Submit"
 </form>
