--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h2>Von mir für dich</h2>
 
 <form name="myform">
-    <label><br>Couponcode:</label>
+    <label><br>Giftcode:<br></label>
     <input type="text" name="code" value="Enter code here" onfocus="this.value=''"><br>
     <input type="submit" onclick="submit()" value="Submit"
 </form>
