Add tiny suggestions for smoother christmas experience

--- a/essen.html
+++ b/essen.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<img src="/Images/Essensgutschein.jpg" alt="Gutschein" style="width: 100%;max-width: 800px">
+<img src="Images/Essensgutschein.jpg" alt="Gutschein" style="width: 100%;max-width: 800px">
 
 </body>
 
