--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <script src="gutschein.js"> </script>
+    <meta charset="utf8"/>
+    <title>Frohe Weihnachten!</title>
 </head>
 
 <body>
@@ -16,7 +18,7 @@
 
 <form name="myform">
     <label><br>Giftcode:<br></label>
-    <input type="text" name="code" value="Enter code here" onfocus="this.value=''"><br>
+    <input type="text" name="code" placeholder="Enter code here"><br>
     <input type="submit" onclick="submit()" value="Submit"
 </form>
 
