--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="gutschein.js"> </script>
     <meta charset="utf8"/>
-    <title>Test Website - Please ignore</title>
+    <title>Merry Christmas</title>
 </head>
 
 <body>
 <div class="container">
 <div class="main">
     
-<h1>Test website</h1>
-<h2>Please ignore</h2>
+<h1>Merry Christmas</h1>
+<h2>Gutscheinverschenkmaschine 2020</h2>
 
 <form name="myform">
     <label><br>Giftcode:<br></label>
