--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="main">
     
 <h1>Merry Christmas</h1>
-<h2>Gutscheinverschenkmaschine 2.0</h2>
+<h2>Gutscheinverschenkmaschine 2 . 0</h2>
 
 <form name="myform">
     <label><br>Giftcode:<br></label>
