--- a/vienna.html
+++ b/vienna.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<body style="background-color:black;">
+<body style="background-color:#020820;">
 <p>
     <a href="https://www.grandferdinand.com">
     <img src="Images/Wien.jpg" alt="Gutschein" style="width: 100%;max-width: 1100px">
