Add page to show hash for voucher code, upperCase for everything

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <html lang="de">
 
 <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="gutschein.js"> </script>
-    <meta charset="utf8"/>
-    <title>Merry Christmas</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="vouchermachine.js"></script>
+    <meta charset="utf8" />
+    <title>Cadeaukaartverwisselmachine</title>
 </head>
 
 <body>
 <div class="container">
 <div class="main">
     
-<h1>Merry Christmas</h1>
-<h2>Gutscheinverschenkmaschine 2020</h2>
+<h1></h1>
+<h2>Cadeaukaartverwisselmachine 2020</h2>
 
 <form name="myform">
-    <label><br>Giftcode:<br></label>
-    <input type="text" name="code" placeholder="Enter code here"><br>
-    <input type="submit" onclick="submit()" value="Submit"
+    <label><br>Giftcode:</label><br />
+    <input type="text" name="code" placeholder="Enter code here" /><br />
+    <input type="submit" onclick="submit()" value="Submit" />
 </form>
 
 </div>
